<resources>
    <string name="app_name" translatable="false">Android-template</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="my_books">My Books</string>
    <string name="loading">Loading…</string>
    <string name="book_cover">book cover</string>
    <string name="greeting_text">What are you reading today?</string>
    <string name="popular_label">Popular Books</string>
    <string name="books">Books</string>
    <string name="see_more">See More >></string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="top_novels">Top Novels</string>
    <string name="sort_by_year">Sort By Year</string>
    <string name="sort_by_rating">Sort By Rating</string>
    <string name="error_occurred">An error occurred</string>
    <string name="search_hint" >Search</string>
    <string name="search_results" >Results</string>
    <string name="search_see_all" >See All</string>
    <string name="radio_button_title" >Title</string>
    <string name="radio_button_author" >Author</string>
    <string name="radio_button_genres" >Genres</string>
    <string name="chose_search" >Search by</string>
</resources>
