<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.search.SearchFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/custom_search"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        app:queryHint="@string/search_hint" />

    <TextView
        android:layout_margin="@dimen/margin_small"
        android:text="@string/chose_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rg_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin_small"
        android:checkedButton="@+id/rb_title">
        <RadioButton
            android:id="@+id/rb_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_title"
            android:fontFamily="@font/worksans_regular"
            android:layout_marginEnd="@dimen/margin_small" />

        <RadioButton
            android:id="@+id/rb_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_author"
            android:fontFamily="@font/worksans_regular"
            android:layout_marginEnd="@dimen/margin_small"/>

        <RadioButton
            android:id="@+id/rb_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_genres"
            android:fontFamily="@font/worksans_regular"
            android:layout_marginEnd="@dimen/margin_small"/>
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/tv_search_result"
        android:layout_margin="@dimen/margin_xsmall"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_height">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/black"
            android:fontFamily="@font/worksans_semibold"
            android:text="@string/search_results"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tv_see_all"
            android:padding="@dimen/padding_xsmall"
            android:fontFamily="@font/worksans_regular"
            android:text="@string/search_see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/img_next" />

        <ImageView
            android:id="@+id/img_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevrons_right"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_search_result"
        android:layout_marginTop="@dimen/margin_medium" />

</LinearLayout>
