<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_10">

            <TextView
                android:id="@+id/tvGreeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_regular"
                android:text="@string/greeting_text"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivLanguageFlag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/en"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_10">

            <TextView
                android:id="@+id/tvPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_bold"
                android:text="@string/popular_label"
                android:textColor="@color/text_bold_black"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPopularSeeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_regular"
                android:text="@string/see_more"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHomeBooks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:itemCount="4"
            tools:listitem="@layout/viewholder_home_book" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:padding="@dimen/dp_10">

            <TextView
                android:id="@+id/tvAuthors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_bold"
                android:text="@string/author_label"
                android:textColor="@color/text_bold_black"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAuthorSeeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_regular"
                android:text="@string/see_more"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHomeAuthors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/viewholder_home_author" />

    </LinearLayout>

</ScrollView>
